# 42sh

./: .gitlab-ci.yml  index.md  meson.build
.github/workflows/: greetings.yml
builddir/: .ninja_deps  .ninja_log  42sh  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
geoffroy/: echo.c
src/: meson.build
src/commands/: cd.c  cd.h  command.c  command.h  command_pipe.c  command_pipe.h  command_redir.c  command_redir.h  dot.c  echo.c  echo.h  meson.build  unset.c
src/exec/: concat.c  concat.h  meson.build
src/functionnal/: a.out  functionnal.c  functionnal.h  main.c  meson.build
src/lexer/: for_lexer.c  lexer.c  lexer.h  lexer_added.c  meson.build  token.c  token.h  token_printer.c
src/parser/: a.out  get_to_parse.c  get_to_parse.h  main.c  main_exec.c  make_child.c  make_child.h  meson.build  parser.c  parser.h  parser_exec.c  parser_exec.h  parser_exec_test.c  parser_free.c  parser_free.h  parser_print_test.c  parser_printer.c  parser_printer.h  struct.h  struct_init.c  struct_init.h
tests/: run_test_error_if  run_tests  run_tests_2  run_tests_command_exec  run_tests_echo  run_tests_lexer_for  run_tests_pipe  run_tests_redir  test_functionnal.c  test_geoffroy.c  tests_variables  token_printer  variables
tests/dementor/: as_script.sh  test_1
tests/geoff/: a.out  command_test.c  echo_test.c  pipe_test.c  redir_test.c
tests/week1/: test_echo  test_var.sh  test_var2.sh  test_var3.sh  tests_concat  (+1 more)
(+23 files in other folders)
